progress bar no longer squished at bottom

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -253,11 +253,11 @@ button {
 
 .progress-bar-image { 
   position: relative;
-  top: 10px;
+  top: 5px;
 }
 .progress-bar-image-caption { 
   position: relative; 
-  top: 25px; 
+  top: 20px; 
   font-size: 10px;
   font-family: 'lato';
 }
